<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/clUsers"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UsersFragment">

    <TextView
        android:id="@+id/tvHeaderUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/find_users"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSearchUsers"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/search"
        app:startIconTint="@color/green"
        app:boxStrokeColor="@color/til_stroke"
        app:hintTextColor="@color/green"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderUsers"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearchUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionSearch" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btgUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:checkedButton="@+id/btnAllUsers"
        app:layout_constraintTop_toBottomOf="@+id/tilSearchUsers"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnAllUsers"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_all_users"
            app:backgroundTint="@color/toggle_bg"
            android:textColor="@color/toggle_text"
            app:strokeColor="@color/green"/>

        <Button
            android:id="@+id/btnFollowingUsers"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_following_users"
            app:backgroundTint="@color/toggle_bg"
            android:textColor="@color/toggle_text"
            app:strokeColor="@color/green"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <ProgressBar
        android:id="@+id/pbUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/btgUsers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btgUsers"
        tools:listitem="@layout/item_user" />

    <TextView
        android:id="@+id/tvEmptyUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_following"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btgUsers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>