<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/clSettings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FeedFragment">

    <TextView
        android:id="@+id/tvHeaderFeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feed"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindUsersFeed"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/find_users"
        android:textAllCaps="false"
        app:icon="@drawable/ic_person"
        app:iconTint="@color/green"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderFeed" />

    <TextView
        android:id="@+id/tvEmptyFeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_feed_message"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/green"
        android:visibility="gone"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/btnFindUsersFeed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshFeed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnFindUsersFeed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>